@@ -1,8 +1,8 @@
 ---
 title: Driftsättning och underhåll
-seo-title: Driftsättning och underhåll
+seo-title: Deploying and Maintaining
 description: Lär dig hur du kommer igång med AEM.
-seo-description: Lär dig hur du kommer igång med AEM.
+seo-description: Learn how to get started with the AEM installation.
 uuid: 4429ac4d-abd7-47d8-b19d-773accb7cc7a
 contentOwner: Guillaume Carlino
 products: SG_EXPERIENCEMANAGER/6.5/SITES
@@ -11,15 +11,14 @@ topic-tags: deploying
 discoiquuid: e48cc0ed-688c-44c8-b6d6-5f3c8593a295
 docset: aem65
 exl-id: 3df0662a-0768-4b56-8b94-c517657b4bd9
-translation-type: tm+mt
-source-git-commit: 1cef6f87fa66fd78d439c23e6ac907f9531b8fd6
+source-git-commit: bb8dbb9069c4575af62a4d0b21195cee75944fea
 workflow-type: tm+mt
-source-wordcount: '1833'
+source-wordcount: '1808'
 ht-degree: 1%
 
 ---
 
-# Distribuera och underhålla{#deploying-and-maintaining}
+# Driftsättning och underhåll{#deploying-and-maintaining}
 
 På den här sidan hittar du:
 
@@ -85,13 +84,13 @@ AEM bygger på denna bas och erbjuder även ett antal funktioner på programniv�
 
 Slutligen kan kunderna använda dessa infrastruktur- och programnivåbyggstenar för att skapa anpassade lösningar genom att bygga egna applikationer.
 
-Den AEM servern är **Java-baserad** och körs på de flesta operativsystem som stöder den plattformen. All klientinteraktion med AEM görs via en **webbläsare**.
+AEM server är **Java-baserad** och kan köras på de flesta operativsystem som stöder den plattformen. All kundinteraktion med AEM sker via en **webbläsare**.
 
 ### Vanliga distributionsscenarier {#typical-deployment-scenarios}
 
 I AEM är &quot;instance&quot; en kopia av AEM som körs på en server. AEM omfattar vanligen minst två instanser, vanligtvis på separata maskiner:
 
-* **Författare**: En AEM som används för att skapa, överföra och redigera innehåll och för att administrera webbplatsen. När innehållet är klart att publiceras replikeras det till publiceringsinstansen.
+* **Upphovsman**: En AEM som används för att skapa, överföra och redigera innehåll och för att administrera webbplatsen. När innehållet är klart att publiceras replikeras det till publiceringsinstansen.
 * **Publicera**: En AEM som skickar det publicerade innehållet till allmänheten.
 
 De här instanserna är identiska vad gäller installerad programvara. De skiljer sig bara åt genom konfiguration. Dessutom använder de flesta installationer en dispatcher:
@@ -106,19 +105,19 @@ I följande avsnitt beskrivs båda scenarierna:
 
 * **Managed Services - Cloud Manager för Adobe Experience Manager**: AEM driftsätts och hanteras av Adobes hanterade tjänster.
 
-### Lokal {#on-premise}
+### Lokalt {#on-premise}
 
-Du kan installera AEM på servrar i din företagsmiljö. Vanliga installationsinstanser: Utvecklings-, testnings- och publiceringsmiljöer. Se avsnittet [Komma igång](/help/sites-deploying/deploy.md#getting%20started) för mer information om hur du får AEM program att installera det lokalt.
+Du kan installera AEM på servrar i din företagsmiljö. Vanliga installationsinstanser: Utvecklings-, testnings- och publiceringsmiljöer. Se [Komma igång](/help/sites-deploying/deploy.md#getting%20started) om du vill ha grundläggande information om hur du får AEM program att installera lokalt.
 
-Mer information om typiska lokala distributioner finns i [Rekommenderade distributioner](/help/sites-deploying/recommended-deploys.md).
+Mer information om de typiska lokala distributionerna finns i [Rekommenderade distributioner](/help/sites-deploying/recommended-deploys.md).
 
 ### Managed Services med Cloud Manager {#managed-services-using-cloud-manager}
 
-AEM Managed Services är en komplett lösning för hantering av digitala upplevelser. Det ger fördelar med upplevelseleverans i molnet samtidigt som man behåller alla kontroll-, säkerhets- och anpassningsfördelar som en lokal driftsättning ger. AEM Managed Services gör det möjligt för kunderna att lansera snabbare genom att driftsätta i molnet och även genom att lära sig de bästa metoderna och den bästa supporten från Adobe. Organisationer och företagsanvändare kan engagera kunderna på minimal tid, öka marknadsandelen och fokusera på att skapa innovativa marknadsföringskampanjer samtidigt som IT-avdelningen minskar bördan.
+AEM Managed Services är en komplett lösning för hantering av digitala upplevelser. Det ger fördelar med upplevelseleverans i molnet samtidigt som alla kontroll-, säkerhets- och anpassningsfördelar vid en lokal driftsättning bibehålls. AEM Managed Services gör det möjligt för kunderna att lansera snabbare genom att driftsätta i molnet och även genom att lära sig de bästa metoderna och den bästa supporten från Adobe. Organisationer och företagsanvändare kan engagera kunderna på minimal tid, öka marknadsandelen och fokusera på att skapa innovativa marknadsföringskampanjer samtidigt som IT-avdelningen minskar bördan.
 
 Med AEM Managed Services kan man dra nytta av följande fördelar:
 
-**Snabbare time to Market:** Med flexibel molninfrastruktur i Adobe Managed Services kan organisationer snabbt planera, lansera och optimera framgångsrika digitala upplevelser. Adobe hanterar molnarkitekturen utan ytterligare kapital-, maskinvaru- eller programvarubehov och Adobe&#39;s Customer Success Engineers, hjälp med AEM arkitektur, provisionering, anpassning för att ansluta till serverprogram och bästa praxis för att publicera.
+**Snabbare time to market:** Med flexibel molninfrastruktur i Adobe Managed Services kan organisationer snabbt planera, lansera och optimera framgångsrika digitala upplevelser. Adobe hanterar molnarkitekturen utan ytterligare kapital-, maskinvaru- eller programvarubehov och Adobe&#39;s Customer Success Engineers, hjälp med AEM arkitektur, provisionering, anpassning för att ansluta till serverprogram och bästa praxis för att publicera.
 
 **Högre prestanda:** Ger tillförlitliga digitala upplevelser för företaget med fyra alternativ för tillgänglighet: 99,5 %, 99,9 %, 99,95 % och 99,99 %. Dessutom kan man med programmet automatiskt säkerhetskopiera och återställa flera lägen för att säkerställa tillförlitlighet och beredskapshantering.
 
@@ -134,23 +133,23 @@ Mer information om Cloud Manager och dess resurser finns i [**Användarhandbok f
 
 ### Förutsättningar {#prerequisites}
 
-Medan produktionsinstanser vanligtvis körs på dedikerade datorer som kör ett operativsystem som stöds officiellt (se [Tekniska krav](/help/sites-deploying/technical-requirements.md)), kommer Experience Manager-servern att köras på alla system som stöder [**Java Standard Edition 8**](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html).
+Medan produktionsinstanser vanligtvis körs på dedikerade datorer som kör ett operativsystem som stöds officiellt (se [Tekniska krav](/help/sites-deploying/technical-requirements.md)) kommer Experience Manager-servern att köras på alla system som har stöd för [**Java Standard Edition 8**](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html).
 
-För att bli bekant och för att kunna utveckla AEM är det mycket vanligt att använda en instans som är installerad på din lokala dator och som kör Apple OS X eller skrivbordsversioner av Microsoft Windows eller Linux.
+För att kunna bli bekant och utveckla AEM är det mycket vanligt att använda en instans som är installerad på din dator och som kör Apple OS X eller skrivbordsversioner av Microsoft Windows eller Linux.
 
-På klientsidan fungerar AEM med alla moderna webbläsare (**Microsoft Edge**, **Internet Explorer** 11, **Chrome **51+** **, **Firefox **47+, **Safari** 8+) både på dator och surfplatta. Mer information finns i [Klientplattformar som stöds](/help/sites-deploying/technical-requirements.md#supported-client-platforms).
+På klientsidan fungerar AEM med alla moderna webbläsare (**Microsoft Edge**, **Internet Explorer** 11, **Krom **51+** **, **Firefox **47+, **Safari** 8+) på både dator och surfplatta. Se [Klientplattformar som stöds](/help/sites-deploying/technical-requirements.md#supported-client-platforms) för mer information.
 
 ### Hämta programvaran {#getting-the-software}
 
-Kunder med giltigt underhålls- och supportavtal bör ha fått ett e-postmeddelande med en kod och kunna hämta AEM från [**Adobe licenswebbplats**](https://licensing.adobe.com/). Affärspartners kan begära nedladdningsåtkomst från [**spphelp@adobe.com**](mailto:spphelp@adobe.com).
+Kunder med giltigt underhålls- och supportavtal ska ha fått ett e-postmeddelande med en kod och kunna hämta AEM från [**Adobe licenswebbplats**](https://licensing.adobe.com/). Affärspartners kan begära nedladdningsåtkomst från [**spphelp@adobe.com**](mailto:spphelp@adobe.com).
 
 Programpaketet AEM finns i två former:
 
-* **cq-quickstart-6.5.0.jar:** En fristående körbar  ** jarfil som innehåller allt som behövs för att komma igång.
+* **cq-quickstart-6.5.0.jar:** En fristående körbar fil *jar* som innehåller allt som behövs för att komma igång.
 
-* **cq-quickstart-6.5.0.war:** En  ** warfile för distribution i en tredjepartsprogramserver.
+* **cq-quickstart-6.5.0.war:** A *krig* -fil för distribution till en tredjepartsprogramserver.
 
-I följande avsnitt beskriver vi den fristående **installationen**. Mer information om hur du installerar AEM på en programserver finns i [Programserverinstallation](/help/sites-deploying/application-server-install.md).
+I följande avsnitt beskriver vi **fristående installation**. Mer information om hur du installerar AEM på en programserver finns i [Installation av programserver](/help/sites-deploying/application-server-install.md).
 
 ### Lokal standardinstallation {#default-local-install}
 
@@ -160,13 +159,13 @@ I följande avsnitt beskriver vi den fristående **installationen**. Mer informa
 
    Installationsplats för Windows: **`C:\Program Files\aem`**
 
-   Det är också vanligt att du installerar exempelinstanser i en mapp direkt på skrivbordet. I vilket fall som helst ska vi i allmänhet hänvisa till den här platsen som:
+   Det är också vanligt att du installerar exempelinstanser i en mapp direkt på skrivbordet. I vilket fall som helst kommer vi att i allmänhet hänvisa till den här platsen som:
 
    `<aem-install>`
 
    *Observera att sökvägen till filkatalogen endast får bestå av ASCII-tecken från USA.*
 
-1. Placera filerna **jar** och **license **i den här katalogen:
+1. Placera **jar** och **license **filer i den här katalogen:
 
    ```shell
    <aem-install>/
@@ -174,26 +173,20 @@ I följande avsnitt beskriver vi den fristående **installationen**. Mer informa
        license.properties
    ```
 
-   Om du inte anger en `license.properties`-fil dirigeras AEM om webbläsaren till en **välkomstskärm när du startar, där du kan ange en licensnyckel.** Du måste begära en giltig licensnyckel från Adobe om du inte redan har en.
+   Om du inte anger en `license.properties` AEM dirigerar om webbläsaren till en **Välkommen** när programmet startas, där du kan ange en licensnyckel. Du måste begära en giltig licensnyckel från Adobe om du inte redan har en.
 
-1. Om du vill starta instansen i en GUI-miljö dubbelklickar du bara på filen **`cq-quickstart-6.5.0.jar`**.
+1. Om du vill starta instansen i en GUI-miljö dubbelklickar du på knappen **`cq-quickstart-6.5.0.jar`** -fil.
 
-   Du kan även starta AEM från kommandoraden. För en 32-bitars Java VM anger du följande:
+   Du kan även starta AEM från kommandoraden:
 
    ```shell
        java -Xmx1024M -jar cq-quickstart-6.5.0.jar
    ```
 
-   För en 64-bitars virtuell dator anger du:
-
-   ```shell
-       java -XX:MaxPermSize=256m -Xmx1024M -jar cq-quickstart-6.5.0.jar
-   ```
-
 AEM tar några minuter att packa upp burkfilen, installera och starta. Ovannämnda procedur ger följande resultat:
 
-* en **AEM författare**-instans
-* körs på **localhost**
+* en **AEM** instance
+* körs **localhost**
 * på port **4502**
 
 Så här kommer du åt instansen genom att peka webbläsaren på:
@@ -204,7 +197,7 @@ Resultatet i författarinstansen konfigureras automatiskt för att ansluta till 
 
 ### Skapa och publicera installationer {#author-and-publish-installs}
 
-Standardinstallationen (en **författare**-instans på **`localhost:4502`**) kan ändras genom att namnet på filen `jar` ändras innan den startas för första gången. Namnmönstret är:
+standardinstallation (en **författare** instans på **`localhost:4502`**) kan ändras genom att du byter namn på `jar` innan du startar programmet för första gången. Namnmönstret är:
 
 **`cq-<instance-type>-p<port-number>.jar`**
 
@@ -212,7 +205,7 @@ Byt namn på filen till
 
 **`cq-author-p4502.jar`**
 
-om du startar programmet kommer en författarinstans att köras på **`localhost:4502`**.
+och när du startar programmet körs en författarinstans på **`localhost:4502`**.
 
 På samma sätt byter du namn på och startar filen
 
@@ -233,7 +226,7 @@ Mer information om hur du anpassar installationen finns i:
 
 ### Opackad installationskatalog {#unpacked-install-directory}
 
-När snabbstartburken startas för första gången packas den upp i samma katalog under en ny underkatalog som heter `crx-quickstart`. Resultatet blir följande:
+När snabbstartsburken startas för första gången packas den upp i samma katalog under en ny underkatalog som kallas `crx-quickstart`. Resultatet blir följande:
 
 ```xml
 <aem-install>/
@@ -263,15 +256,15 @@ Om instansen installerades från användargränssnittet öppnas ett webbläsarf�
 
 >[!NOTE]
 >
->Om du använder symboler bör du ta en titt på [problem med symlink](https://helpx.adobe.com/experience-manager/kb/changing-symlink.html).
+>Om du använder symboler kan du titta på [problem med symbollänk](https://helpx.adobe.com/experience-manager/kb/changing-symlink.html).
 
 ### Starta och stoppa {#starting-and-stopping}
 
 När AEM har packat upp sig och startat för första gången startar du bara instansen genom att dubbelklicka på burkfilen i installationskatalogen. Den installeras inte igen.
 
-Om du vill stoppa instansen från det grafiska användargränssnittet klickar du på **på/av** i skrivbordsprogramfönstret.
+Om du vill stoppa instansen från det grafiska användargränssnittet klickar du bara på knappen **på/av** växla till skrivbordsprogramfönstret.
 
-Du kan också stoppa och starta AEM från kommandoraden. Om du redan har installerat instansen för första gången finns kommandoradsskripten **här:**
+Du kan också stoppa och starta AEM från kommandoraden. Om du redan har installerat instansen för första gången visas **kommandoradsskript** finns här:
 
 **`<aem-install>/crx-quickstart/bin/`**
 
@@ -282,7 +275,7 @@ Den här mappen innehåller följande Unix-basskalskript:
 * **`status`**: Rapporterar status för instansen
 * **`quickstart`**: Används för att konfigurera startinformation, om det behövs.
 
-Det finns också motsvarande **`bat`**-filer för Windows. Mer detaljerad information finns i:
+Det finns också motsvarande **`bat`** filer för Windows. Mer detaljerad information finns i:
 
 * [Kommandoradens start och stopp](/help/sites-deploying/command-line-start-and-stop.md)
 
